src/compiletest/lcell-08.stderr
error[E0502]: cannot borrow `owner` as mutable because it is also borrowed as immutable
  --> $DIR/lcell-08.rs:12:14
   |
11 |         let c1ref = owner.ro(&c1);
   |                     ----- immutable borrow occurs here
12 |         test(&mut owner);    // Compile error
   |              ^^^^^^^^^^ mutable borrow occurs here
13 |         println!("{}", *c1ref);
   |                        ------ immutable borrow later used here
